hasqd/tests/coptest/usr/ab/hsl/neg/fid_hsl_ag_bd.inp
ag build
ag build "a" 
ag build "a" "b"
ag build "a" "b" "c"
ag build "a" "b" "c" [ d ] "e"
quit
